sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__base_2_sample_1.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_2_sample_1
expression: "TransportDeductions::from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │ 3   ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║ 3 4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
  deductions:
    - "r0c1: set value 2, because of: r0c1: candidate 2"
    - "r1c2: set value 2, because of: r1c2: candidate 2"
    - "r2c3: set value 4, because of: r2c3: candidate 4"
    - "r3c0: set value 4, because of: r3c0: candidate 4"
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │     ║     │     ║
    - ║  1  │  2  ║  4  │     ║
    - ║     │     ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │ 1   ║
    - ║     │     ║  2  │     ║
    - ║ 3   │ 3 4 ║     │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │     ║ 1   │     ║
    - ║     │     ║     │  4  ║
    - ║ 3   │ 3   ║ 3   │     ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║  4  │  1  ║     │  2  ║
    - ║     │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 1
        setValue: 2
  - reasons:
      - position:
          row: 1
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 2
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 2
          column: 3
        setValue: 4
  - reasons:
      - position:
          row: 3
          column: 0
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 0
        setValue: 4
