sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__hidden_singles__tests__snapshots__base_3_sample_1.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/hidden_singles.rs
description: Strategy HiddenSingles executed on grid base_3_sample_1
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║  2  │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │     │  2  ║     │  23 │  23 ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║ 789 │ 78  │  8  ║     │ 7   │   9 ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │ 7   │     ║ 7 9 │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 12  ║     │     │ 1   ║ 1   │  2  │     ║
    - ║ 45  │ 4   │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║ 78  │ 78  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │ 1 3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 123 │     ║     │ 1   │ 1   ║ 1 3 │     │ 123 ║
    - ║ 45  │ 4   │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │ 1   │ 1   ║ 1 3 │     │ 1 3 ║
    - ║ 4 6 │ 4 6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║ 45  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c0: set value 6, because of: r0c0: candidate 6"
    - "r0c3: set value 4, because of: r0c3: candidate 4"
    - "r0c6: set value 9, because of: r0c6: candidate 9"
    - "r1c4: set value 6, because of: r1c4: candidate 6"
    - "r1c5: set value 2, because of: r1c5: candidate 2"
    - "r1c8: set value 5, because of: r1c8: candidate 5"
    - "r2c1: set value 1, because of: r2c1: candidate 1"
    - "r3c2: set value 5, because of: r3c2: candidate 5"
    - "r3c3: set value 7, because of: r3c3: candidate 7"
    - "r3c5: set value 6, because of: r3c5: candidate 6"
    - "r3c7: set value 4, because of: r3c7: candidate 4"
    - "r4c0: set value 7, because of: r4c0: candidate 7"
    - "r4c7: set value 6, because of: r4c7: candidate 6"
    - "r5c1: set value 3, because of: r5c1: candidate 3"
    - "r6c3: set value 3, because of: r6c3: candidate 3"
    - "r6c4: set value 4, because of: r6c4: candidate 4"
    - "r6c5: set value 8, because of: r6c5: candidate 8"
    - "r6c6: set value 7, because of: r6c6: candidate 7"
    - "r7c0: set value 5, because of: r7c0: candidate 5"
    - "r7c6: set value 3, because of: r7c6: candidate 3"
    - "r8c1: set value 8, because of: r8c1: candidate 8"
    - "r8c4: set value 5, because of: r8c4: candidate 5"
    - "r8c7: set value 9, because of: r8c7: candidate 9"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │  2  ║     │     │     ║     │     │     ║
    - ║  6  │  5  │     ║  4  │  8  │  3  ║  9  │  1  │  7  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │   3 │     ║
    - ║     │     │     ║  1  │  6  │  2  ║  4  │     │  5  ║
    - ║  89 │ 7   │  8  ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │  2  │     ║
    - ║  3  │  1  │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │     │     ║   9 │ 7   │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║     │     │     ║ 1   │     │     ║
    - ║     │     │  5  ║  7  │  3  │  6  ║     │  4  │  9  ║
    - ║  8  │     │     ║     │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  9  │     ║  8  │  2  │  4  ║  5  │  6  │     ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║     │ 1   │ 1   ║ 1   │     │ 12  ║
    - ║ 4   │  3  │  6  ║  5  │     │     ║     │  7  │     ║
    - ║  8  │     │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║     │     │     ║     │     │ 1   ║
    - ║     │   6 │  9  ║  3  │  4  │  8  ║  7  │  5  │     ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║     │     │     ║
    - ║  5  │ 4   │  7  ║  2  │  9  │     ║  3  │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │  8  │  3  ║  6  │  5  │  7  ║  2  │  9  │  4  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 0
        candidates:
          - 6
    actions:
      - position:
          row: 0
          column: 0
        setValue: 6
  - reasons:
      - position:
          row: 0
          column: 3
        candidates:
          - 4
    actions:
      - position:
          row: 0
          column: 3
        setValue: 4
  - reasons:
      - position:
          row: 0
          column: 6
        candidates:
          - 9
    actions:
      - position:
          row: 0
          column: 6
        setValue: 9
  - reasons:
      - position:
          row: 1
          column: 4
        candidates:
          - 6
    actions:
      - position:
          row: 1
          column: 4
        setValue: 6
  - reasons:
      - position:
          row: 1
          column: 5
        candidates:
          - 2
    actions:
      - position:
          row: 1
          column: 5
        setValue: 2
  - reasons:
      - position:
          row: 1
          column: 8
        candidates:
          - 5
    actions:
      - position:
          row: 1
          column: 8
        setValue: 5
  - reasons:
      - position:
          row: 2
          column: 1
        candidates:
          - 1
    actions:
      - position:
          row: 2
          column: 1
        setValue: 1
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 5
    actions:
      - position:
          row: 3
          column: 2
        setValue: 5
  - reasons:
      - position:
          row: 3
          column: 3
        candidates:
          - 7
    actions:
      - position:
          row: 3
          column: 3
        setValue: 7
  - reasons:
      - position:
          row: 3
          column: 5
        candidates:
          - 6
    actions:
      - position:
          row: 3
          column: 5
        setValue: 6
  - reasons:
      - position:
          row: 3
          column: 7
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 7
        setValue: 4
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 7
    actions:
      - position:
          row: 4
          column: 0
        setValue: 7
  - reasons:
      - position:
          row: 4
          column: 7
        candidates:
          - 6
    actions:
      - position:
          row: 4
          column: 7
        setValue: 6
  - reasons:
      - position:
          row: 5
          column: 1
        candidates:
          - 3
    actions:
      - position:
          row: 5
          column: 1
        setValue: 3
  - reasons:
      - position:
          row: 6
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 6
          column: 3
        setValue: 3
  - reasons:
      - position:
          row: 6
          column: 4
        candidates:
          - 4
    actions:
      - position:
          row: 6
          column: 4
        setValue: 4
  - reasons:
      - position:
          row: 6
          column: 5
        candidates:
          - 8
    actions:
      - position:
          row: 6
          column: 5
        setValue: 8
  - reasons:
      - position:
          row: 6
          column: 6
        candidates:
          - 7
    actions:
      - position:
          row: 6
          column: 6
        setValue: 7
  - reasons:
      - position:
          row: 7
          column: 0
        candidates:
          - 5
    actions:
      - position:
          row: 7
          column: 0
        setValue: 5
  - reasons:
      - position:
          row: 7
          column: 6
        candidates:
          - 3
    actions:
      - position:
          row: 7
          column: 6
        setValue: 3
  - reasons:
      - position:
          row: 8
          column: 1
        candidates:
          - 8
    actions:
      - position:
          row: 8
          column: 1
        setValue: 8
  - reasons:
      - position:
          row: 8
          column: 4
        candidates:
          - 5
    actions:
      - position:
          row: 8
          column: 4
        setValue: 5
  - reasons:
      - position:
          row: 8
          column: 7
        candidates:
          - 9
    actions:
      - position:
          row: 8
          column: 7
        setValue: 9
